--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
       </section>
 
       <div class="info">
-        <a href="/archive/">
+        <a href="{{ '/archive/' | relative_url }}">
           <img src="{{ '/assets/img/group-photo-2024.jpg' | relative_url }}" class="img-responsive center-block img-thumbnail" alt="Group photo 2024">
         </a>
       </div>
